@@ -10,8 +10,3 @@ usable \
   linux-image-2.6-sparc64-smp \
   linux-image-2.6.18-1-sparc64 \
   linux-image-2.6.18-1-sparc64-smp
-unusable \
-  linux-image-2.6-sparc32 \
-  linux-image-2.6-sparc32-smp \
-  linux-image-2.6.18-1-sparc32 \
-  linux-image-2.6.18-1-sparc32-smp
