@@ -1,15 +1,0 @@
-cpuinfo sparc32.cpuinfo
-machine sparc
-majors 2.6
-flavour sparc32
-kernel-2.6 linux-image-2.6-sparc32
-usable \
-  linux-image-2.6-sparc32 \
-  linux-image-2.6.18-1-sparc32
-unusable \
-  linux-image-2.6-sparc32-smp \
-  linux-image-2.6.18-1-sparc32-smp \
-  linux-image-2.6-sparc64 \
-  linux-image-2.6-sparc64-smp \
-  linux-image-2.6.18-1-sparc64 \
-  linux-image-2.6.18-1-sparc64-smp
