@@ -2,8 +2,9 @@ base-installer (1.84) UNRELEASED; urgency=low
 
   * Drop isinstallable test for sarge, we don't support sarge installs
     anymore.
+  * Remove support for sparc32.
 
- -- Frans Pop <fjp@debian.org>  Tue, 24 Jul 2007 07:29:12 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 25 Jul 2007 23:53:06 +0200
 
 base-installer (1.83) unstable; urgency=low
 
